#[workspace]
#resolver = "2"

[package]
authors = ["swrge"]
description = "Miscellaneous utilities for Twilight."
edition = "2021"
homepage = "https://twilight.rs"
include = ["/src"]
keywords = ["discord", "discord-api", "twilight"]
license = "MIT"
name = "randy-tools"
publish = true
repository = "https://github.com/swrge/randy-tools"
rust-version = "1.84.0"

version = "0.1.0"

[dependencies]
randy-model = { default-features = false, optional = true, git = "https://github.com/swrge/randy-model", version = "0.1.0", package = "randy-model" }
twilight-validate = { default-features = false, optional = true, git = "https://github.com/swrge/randy-validate", version = "0.1.0", package = "randy-validate" }

[dev-dependencies]
chrono = { default-features = false, features = ["std"], version = "0.4" }
static_assertions = { default-features = false, version = "1" }
time = { default-features = false, features = ["formatting"], version = "0.3" }

[features]
builder = ["dep:randy-model", "dep:twilight-validate"]
link = ["dep:randy-model"]
permission-calculator = ["dep:randy-model"]
snowflake = ["dep:randy-model"]
full = ["builder", "link", "permission-calculator", "snowflake"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
