#[workspace]
#resolver = "2"

[package]
name = "randy-tools"
description = "Miscellaneous utilities for randy."
repository = "https://github.com/swrge/randy-tools"
version = "0.1.0"
include = ["/src"]
authors = ["swrge", "Twilight Contributors"]
edition = "2021"
rust-version = "1.84.0"
license = "ISC"


[dependencies]
randy-model = { default-features = false, optional = true, git = "https://github.com/swrge/randy-model", version = "0.1.0", package = "randy-model" }
randy-validate = { default-features = false, optional = true, git = "https://github.com/swrge/randy-validate", version = "0.1.0", package = "randy-validate" }

[dev-dependencies]
chrono = { default-features = false, features = ["std"], version = "0.4" }
static_assertions = { default-features = false, version = "1" }
time = { default-features = false, features = ["formatting"], version = "0.3" }

[features]
builder = ["dep:randy-model", "dep:randy-validate"]
link = ["dep:randy-model"]
permission-calculator = ["dep:randy-model"]
snowflake = ["dep:randy-model"]
full = ["builder", "link", "permission-calculator", "snowflake"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
